Tue Feb 11 17:00:38 2014  Zachary Scott  <e@zzak.io>

	* ext/tk/README.tcltklib: [DOC] Fix typo by @xta [Fixes GH-532]

Sun Feb  9 13:59:29 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Fix compilation error.
	  https://bugs.ruby-lang.org/issues/8358#note-16

Sun Feb  9 05:20:24 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (rb_cv_gnu_qsort_r): use compile error "conflicting
	  types for 'qsort_r'" instead of AC_RUN_IFELSE.

Sun Feb  9 04:07:34 2014  Zachary Scott  <e@zzak.io>

	* lib/yaml.rb: [DOC] Add links to syck and psych on github [Bug #9501]
	  Based on a patch by Giorgos Tsiftsis

Sun Feb  9 02:13:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (OBJ_TAINTABLE, OBJ_TAINT, OBJ_INFECT),
	  marshal.c (r_entry0): all Numerics never be tainted now.
	  [ruby-core:57346] [Bug #8945]

Sat Feb  8 23:40:35 2014  Vit Ondruch  <vondruch@redhat.com>

	* configure.in: add qouting brackets and append wildcard for the
	  rest after target_cpu, to properly detect platform for SSE2
	  instructions.  [ruby-core:60576] [Bug #8358]

Sat Feb  8 21:44:07 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: check qsort_r(3) and whether it is GNU version.
	  BSD version has different prototype.

	* util.h: use qsort_r() as ruby_qsort() if it is GNU version.

	* util.c: define ruby_qsort() if needed.

Sat Feb  8 16:34:36 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageDecoder#get_labels):
	  Make it iterative.

Sat Feb  8 15:54:12 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c, gc.h (rb_objspace_marked_object_p): added.
	  This function *ONLY* works just after marking phase,
	  before any sweeping.
	  This function is highly depending current GC implementation
	  and can be removed future version.

Sat Feb  8 15:41:37 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: Don't set CLOEXEC flag explicitly.  (Ruby set it by
	  default.)

Sat Feb  8 15:27:02 2014  Tanaka Akira  <akr@fsij.org>
